# skyline-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/scenes/: city.toml  point_test.toml  simple_physics.toml  test.toml
include/engine/: component_registry.h  engine.h  engine_components.h  entity_view.h  game.h  map_loader.h  overlay.h  physics.h  scene.h  system_registry.h
include/game/: city_builder.h  component_registry.h  components.h  debug.h  draw_scene.h  editor.h  entity_view.h  game.h  game_components.h  marvin_systems.h  memory.h  memory_types.h  movement.h  overlay.h  physics.h  registry.h  scene.h  scene_loader.h  scene_view.h  serialize.h  skl_thread_safe_primitives.h  system_registry.h  utils.h
include/platform/: main.h  platform_loader.h  platform_loop.h  platform_memory.h
include/renderer/gl/: gl.h
include/renderer/vulkan/: imgui_impl_vulkan.h  pipeline_builder.h  vk_render_types.h  vk_render_utils.h
include/renderer/webgpu/: bind_group_wgpu.h  dynamic_light_converter.h  dynamic_shadow_array.h  guard.h  render_state_wgpu.h  render_types_wgpu.h  renderer_wgpu.h  single_textures_wgpu.h  utils_wgpu.h  wgsl_macro_processor.h
include/renderer/webgpu/sdl3webgpu-main/: sdl3webgpu.c
include/shared/: asset_types.h  debug.h  game_platform.h  memory.h  meta_definitions.h  render_backend.h  render_game.h  render_types.h  skl_math_types.h  skl_math_utils.h  skl_thread_safe_primitives.h  skl_types.h  timer.h
maps/: city.toml  light_performance.toml  marvin_level.toml  point_test.toml  simple_physics.toml  test.toml
models/: cube.glb  prism.glb  pyra.glb  trap.glb
scenes/: simple_physics.toml  test.toml
shaderbin/: color.frag.spv  color.vert.spv  color_shader.wgsl  default_shader.wgsl  depth.vert.spv  depth_shader.wgsl  dirshadow.frag.spv  editor.frag.spv  icon.frag.spv  icon.vert.spv  point_depth_shader.wgsl  shadow.frag.spv  shadow.vert.spv  shadow_map.wgsl  skybox_shader.wgsl
shaders/: color.slang  cubemap.slang  depth.slang
shaders/glsl/: color.frag.glsl  color.vert.glsl  cubemap.frag.glsl  cubemap.vert.glsl  depth.vert.glsl  editor.frag.glsl  icon.frag.glsl  icon.vert.glsl  shadow.frag.glsl  shadow.vert.glsl  skybox.vert.glsl
shaders/vulkan/: color.frag.glsl  dirshadow.frag.glsl  icon.vert.glsl  post.frag.glsl  screen.vert.glsl  shadow.frag.glsl
shaders/webgpu/: color_shader.wgsl  default_shader.wgsl  depth_shader.wgsl  point_depth_shader.wgsl  shadow_map.wgsl  skybox_shader.wgsl
src/: asset_types.h  asset_utils.cpp  components.cpp  debug.cpp  debug.h  ecs.cpp  ecs.h  game.cpp  game.h  game_platform.h  main.cpp  main.h  memory.h  memory_types.h  meta_definitions.h  physics.cpp  platform_metrics.cpp  scene_loader.cpp  skl_logger.h  systems.cpp
src/engine/: draw_scene.cpp  editor.cpp  engine.cpp  engine_components.cpp  map_loader.cpp  overlay.cpp  physics.cpp  scene.cpp  serialize.cpp  system_registry.cpp  utils.cpp
src/game/: city_builder.cpp  component_registry.cpp  debug.cpp  draw_scene.cpp  editor.cpp  game.cpp  game_components.cpp  map_loader.cpp  marvin_systems.cpp  movement.cpp  overlay.cpp  physics.cpp  scene.cpp  scene_loader.cpp  serialize.cpp  system_registry.cpp  utils.cpp
src/math/: CMakeLists.txt  skl_math_types.h  skl_math_utils.cpp  skl_math_utils.h
src/platform/: allocator.cpp  asset_utils.cpp  main.cpp  platform_loader.cpp  platform_loop.cpp  platform_memory_utils.cpp  platform_metrics.cpp
src/renderer/: render_backend.h  render_game.h  render_types.h
src/renderer/gl_backend/: README.md
src/renderer/vk_backend/: imgui_impl_vulkan.cpp  pipeline_builder.cpp  renderer_vk.cpp  vk_render_types.h  vk_render_utils.cpp  vma_impl.cpp
src/renderer/wgpu_backend/: CMakeLists.txt  README.md  bind_group_wgpu.cpp  bind_group_wgpu.h  dynamic_light_converter.cpp  dynamic_light_converter.h  dynamic_shadow_array.cpp  dynamic_shadow_array.h  dynamic_shadow_vector_map_wgpu.h  render_backend_wgpuimpl.cpp  render_state_wgpu.h  render_types_wgpu.h  renderer_wgpu.cpp  renderer_wgpu.h  single_textures_wgpu.cpp  single_textures_wgpu.h  utils_wgpu.cpp  wgsl_macro_processor.cpp
src/utils/: CMakeLists.txt  debug.cpp  skl_math_utils.cpp
